force-app/main/default/objects/redwing__My_Team_Hierarchy__mdt/redwing__My_Team_Hierarchy__mdt.object-meta.xml
<CustomObject>
    <label>My Team Hierarchy</label>
    <pluralLabel>My Team Hierarchy</pluralLabel>
</CustomObject>