force-app/main/default/objects/redwing__My_Team_Hierarchy__mdt/fields/redwing__Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Audience_Type__c</fullName>
    <inlineHelpText>Select the option based on which My Team Hierarchy will be configured.</inlineHelpText>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permission Set</fullName>
                <default>true</default>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Community Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>