force-app/main/default/objects/redwing__My_Team_Hierarchy__mdt/fields/redwing__Audience_Value__c.field-meta.xml
<CustomField>
    <fullName>redwing__Audience_Value__c</fullName>
    <inlineHelpText>Defines the needed value for Audience Type.</inlineHelpText>
    <label>Audience Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>