force-app/main/default/objects/redwing__My_Team_Hierarchy__mdt/fields/redwing__Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hierarchy_Type__c</fullName>
    <inlineHelpText>Defines Hierarchy Type for My Team functionality. The following values can be used: &quot;Role hierarchy&quot;, &quot;Manager field&quot;, &quot;Account Power Users&quot;, Api Name of custom lookup field on the User object or Api Name of custom apex class.</inlineHelpText>
    <label>Hierarchy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>